--- a/proj_yield_curve_construction/.gitignore
+++ b/proj_yield_curve_construction/.gitignore
@@ -6,7 +6,7 @@ __pycache__/
 # C extensions
 *.so
 # api file to ignore
-../proj_backtest_strategy/.env
+.env
 # Distribution / packaging
 .Python
 build/
